--- a/_posts/2023-01-12-Best-Books-In-2023.md
+++ b/_posts/2023-01-12-Best-Books-In-2023.md
@@ -58,7 +58,7 @@ During my pursuit of finding an engaging friendship book, I found some beautiful
 
 <a href="https://www.amazon.co.uk/All-Want-Impossible-Things-friendship/dp/085752898X?crid=1RDVC5ALNGC2G&keywords=we+all+want+impossible+things+catherine+newman&qid=1673033650&sprefix=we+all+wan%2Caps%2C138&sr=8-1&linkCode=li3&tag=pjobinson-21&linkId=bec031d8e769c9c381a51af38353ad31&language=en_GB&ref_=as_li_ss_il" target="_blank"><img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=085752898X&Format=_SL250_&ID=AsinImage&MarketPlace=GB&ServiceVersion=20070822&WS=1&tag=pjobinson-21&language=en_GB" ></a><img src="https://ir-uk.amazon-adsystem.com/e/ir?t=pjobinson-21&language=en_GB&l=li3&o=2&a=085752898X" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
 
-<strong> Buy on Amazon: <abbr>https://amzn.to/3GDotWp</abbr></strong>
+<strong> Buy on Amazon: <a href="https://amzn.to/3GDotWp" text="link"></a> </strong>
 
 The story surrounds two women, Edi and Ash, best friends from childhood face a terrible situation in the form of terminal cancer. 
 
