--- a/_posts/2023-01-12-Best-Books-In-2023.md
+++ b/_posts/2023-01-12-Best-Books-In-2023.md
@@ -26,7 +26,7 @@ So I did some digging in some of the most popular websites in search of the best
 
 <!-- ## Inline HTML elements-->
 
-HTML defines a long list of available inline tags, a complete list of which can be found on the [Mozilla Developer Network](https://developer.mozilla.org/en-US/docs/Web/HTML/Element).
+<!--HTML defines a long list of available inline tags, a complete list of which can be found on the [Mozilla Developer Network](https://developer.mozilla.org/en-US/docs/Web/HTML/Element).
 
 - **To bold text**, use `<strong>`.
 - *To italicize text*, use `<em>`.
@@ -35,7 +35,7 @@ HTML defines a long list of available inline tags, a complete list of which can 
 - <del>Deleted</del> text should use `<del>` and <ins>inserted</ins> text should use `<ins>`.
 - Superscript <sup>text</sup> uses `<sup>` and subscript <sub>text</sub> uses `<sub>`.
 
-Most of these elements are styled by browsers with few modifications on our part.
+Most of these elements are styled by browsers with few modifications on our part.-->
 
 <!--page-->
 
@@ -62,7 +62,7 @@ During my pursuit of finding an engaging friendship book, I found some beautiful
 
 The story surrounds two women, Edi and Ash, best friends from childhood face a terrible situation in the form of terminal cancer. 
 
-Catherine makes sure that she has given all life elements to the characters in the novel to make it a “stay up late book” for your reading.
+Catherine has given all life elements to the characters in the novel to make it a “stay up late book” for your reading. You can expect deep friendship bond in the novel beautifully written with mixed emotions. 
 
 
 
