--- a/_posts/2023-01-12-Best-Books-In-2023.md
+++ b/_posts/2023-01-12-Best-Books-In-2023.md
@@ -60,7 +60,7 @@ During my pursuit of finding an engaging friendship book, I found some beautiful
 
 <strong> Buy on Amazon: <a href="https://amzn.to/3GDotWp">https://amzn.to/3GDotWp</a> </strong>
 
-The story surrounds two women, Edi and Ash, best friends from childhood face a terrible situation in the form of terminal cancer. 
+The story surrounds two women, Edi and Ash, best friends from childhood face a terrible situation in the form of terminal cancer. Edi and Ash face the tragedy with their strong friendship and wits.
 
 Catherine has given all life elements to the characters in the novel to make it a “stay up late book” for your reading. You can expect deep friendship bond in the novel beautifully written with mixed emotions. 
 
