--- a/_posts/2023-01-12-Best-Books-In-2023.md
+++ b/_posts/2023-01-12-Best-Books-In-2023.md
@@ -46,7 +46,7 @@ This list is just a creation of my favorite books based on my likes.
 I have also tried to provide amazon links for all the books listed in this article, where you can grab the best deals compared to other sites.
 
 
-## We All Want Impossible Things: by Catherine Newman
+## 1. We All Want Impossible Things: by Catherine Newman
 
 If you think you are a gregarious person, then this book from Catherine Newman is a good addition to your wish list. 
 
@@ -64,6 +64,22 @@ The story surrounds two women, Edi and Ash, best friends from childhood face a t
 
 Catherine has given all life elements to the characters in the novel to make it a “stay up late book” for your reading. You can expect deep friendship bond in the novel beautifully written with mixed emotions. 
 
+
+## 2. Spare: by Prince Harry
+
+Being the youngest son of King Charles III and the late Princess Diana, the life of Prince Harry has always attracted people's attention. Even though The Duke of Sussex had a privileged life, he chose to live an ordinary life. 
+
+After a ten-year-long army service, which included deployment to Afghanistan, he married Meghan Markle, an American actress breaking the usual taboo of royal family practices. 
+
+Spare is an honest revelation of Prince Harry’s insights based on his life experience. The book reveals a different point of view unknown to commoners regarding the royal family life. 
+
+<a href="https://www.amazon.co.uk/Spare-Prince-Harry-Duke-Sussex/dp/0857504797?pd_rd_w=ZbJpN&content-id=amzn1.sym.0fda7aac-1695-4f0a-89eb-24bbf1c36412&pf_rd_p=0fda7aac-1695-4f0a-89eb-24bbf1c36412&pf_rd_r=AVXZ693ZV96BVC2SB7YE&pd_rd_wg=SiaNq&pd_rd_r=1b496835-98e6-4253-8790-e209187c341d&pd_rd_i=0857504797&linkCode=li3&tag=pjobinson-21&linkId=9d4c7278ad3a7c0ec4dfdc424c96eb30&language=en_GB&ref_=as_li_ss_il" target="_blank"><img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=0857504797&Format=_SL250_&ID=AsinImage&MarketPlace=GB&ServiceVersion=20070822&WS=1&tag=pjobinson-21&language=en_GB" ></a><img src="https://ir-uk.amazon-adsystem.com/e/ir?t=pjobinson-21&language=en_GB&l=li3&o=2&a=0857504797" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+
+<strong> Buy on Amazon: <a href= "https://amzn.to/3k4LV77">https://amzn.to/3k4LV77</a> </strong>
+
+The Duke of Sussex aims to support several British charities with donations that earn from his book. Prince has been working forefront of helping vulnerable children and young adults affected by HIV/AIDS in Botswana and Lesotho.
+
+Spare has already become one of the hot topics in all media room discussions in the UK. The ghost in the book has stirred many pen fights and controversies among dignitaries and royal blood. This book is evidently one of its kind, and you should definitely give it a try.
 
 
 ### Heading 3
