third point added

--- a/_posts/2023-01-12-Best-Books-In-2023.md
+++ b/_posts/2023-01-12-Best-Books-In-2023.md
@@ -67,6 +67,34 @@ The Duke of Sussex aims to support several British charities with donations that
 Spare has already become one of the hot topics in all media room discussions in the UK. The ghost in the book has stirred many pen fights and controversies among dignitaries and royal blood. This book is evidently one of its kind, and you should definitely give it a try.
 
 
+## 3. Stolen Focus: by Johann Hari
+
+Are you struggling with a lack of focus? Are you feeling low because of the inability to take a progressive step in your life? 
+
+Sometimes we all are motivated and wish to bring changes to our lives. Perhaps we may have the perfect plan to make life better. 
+
+But somehow, we end up in more agony and sadness and feel like a failure. So, what is the x-factor that drags you down? 
+
+For me, that's a lack of focus. Stolen Focus by Johann Hari deals with 12 deep factors that affect our concentration to execute our goals. 
+
+Let's check what some of the celebrities have to say about this bestseller.
+
+<cite>“This book is exactly what the world needs right now”</cite> - OPRAH WINFREY
+
+<cite>“A beautifully researched and argued exploration of the breakdown of humankind's ability to pay attention” </cite> -  STEPHEN FRY
+
+<strong> Buy on Amazon: <a href= "https://amzn.to/3ZxXjbS"> https://amzn.to/3ZxXjbS </a> </strong>
+
+Johann prepared his book as an effective guide to taking back control of our minds and their thoughts. With authority over focus, we can finally implement our goals. 
+
+Stolen Focus is going to be a great choice for people to regain their self-esteem and be productive in life.
+
+
+
+
+
+
+
 ### Heading 3
 
 #### Heading 4
