--- a/_posts/2023-01-12-Best-Books-In-2023.md
+++ b/_posts/2023-01-12-Best-Books-In-2023.md
@@ -127,6 +127,17 @@ Girls Just Wanna Have Funds were released in the last week of December 2022. The
 
 Guys, this book is a wonderful gift for all your female close ones; a powerful tool that empowers women to gain rewards even with a $1 investment!
 
+
+## Conclusion
+
+I aimed to find out some of the best books that can help me find a new perspective in 2023. So these are the best books for 2023 for me. 
+
+Books are always resourceful and dependable. Good books can change our thought process, motivate us and support us like a friend in need. 
+
+But the trick is to identify the right book from the scrap. Try reading these books and suggest them to your friends.
+
+
+
 <!--
 ### Heading 3
 
